// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.peer-contemplation.acceptance given: [case1] a stone gated on architect (1 blocker) + mechanic (clean) when: [t0] driver attempts --as passed with no .taken then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: architect (l1, 1/3)
   │   ├─ approved [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.given.by_peer.architect.md
   │   └─ taken: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.taken.by_self.architect.md
   │
   ├─ r2: mechanic (l1, 1/3)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r002._.given.by_peer.mechanic.md
   │   └─ taken: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r002._.taken.by_self.mechanic.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🦉 the reviewers await your reply

🌕 lets respond
   │
   ├─ review.peer 1/1
   │  ├─ slug = architect
   │  ├─ verdict = 1 blocker, 0 nitpicks
   │  ├─ contemplate from
   │  │  └─ .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.given.by_peer.architect.md
   │  └─ articulate into
   │     └─ .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.taken.by_self.architect.md
   │
   └─ when you've contemplated this reviewer, run
      └─ rhx route.stone.set --stone 1.execute --as contemplated --that architect
"
`;

exports[`driver.route.peer-contemplation.acceptance given: [case1] a stone gated on architect (1 blocker) + mechanic (clean) when: [t1] driver signals --as contemplated before the .taken exists then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

✋ contemplation absent for reviewer architect

   ├─ the guard looked for your response here, and did not find it
   │  └─ .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.taken.by_self.architect.md
   │
   ├─ why
   │  └─ --as contemplated is a promise that you engaged each
   │     critique. the .taken file IS that engagement — absent
   │     it, there is no ground to stand on.
   │
   └─ what to do
      ├─ contemplate from
      │  └─ .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.given.by_peer.architect.md
      └─ articulate into
         └─ .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.taken.by_self.architect.md
"
`;

exports[`driver.route.peer-contemplation.acceptance given: [case1] a stone gated on architect (1 blocker) + mechanic (clean) when: [t2] driver writes the .taken then signals --as contemplated then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself

🦉 contemplated: architect
   └─ your response is recorded — the reviewer will see it next round
"
`;

exports[`driver.route.peer-contemplation.acceptance given: [case1] a stone gated on architect (1 blocker) + mechanic (clean) when: [t3] driver attempts --as passed with architect answered then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: architect (l1, 1/3)
   │   ├─ approved, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.given.by_peer.architect.md
   │   └─ taken: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.taken.by_self.architect.md
   │
   ├─ r2: mechanic (l1, 1/3)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r002._.given.by_peer.mechanic.md
   │   └─ taken: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r002._.taken.by_self.mechanic.md
   │
   └─ ✓ judge.1 - allowed (cached)

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ 1.execute*.md
   │  ├─ reviews
   │  │   ├─ r1: architect (l1, 1/3)
   │  │   │   ├─ approved, cached
   │  │   │   ├─ 1 blocker 🔴
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   ├─ given: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.given.by_peer.architect.md
   │  │   │   └─ taken: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.taken.by_self.architect.md
   │  │   └─ r2: mechanic (l1, 1/3)
   │  │       ├─ approved, cached
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       ├─ given: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r002._.given.by_peer.mechanic.md
   │  │       └─ taken: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r002._.taken.by_self.mechanic.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 1 --allow-nitpicks 5
   │          └─ · cached
   │             └─ on 1.execute*.md
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.peer-contemplation.acceptance given: [case2] a driver that edits the artifact rather than answers when: [t0] the first pass attempt raises a blocker then: stdout matches snapshot: edit-escape - [t0] the debt is raised 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: architect (l1, 1/3)
   │   ├─ approved [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.given.by_peer.architect.md
   │   └─ taken: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.taken.by_self.architect.md
   │
   ├─ r2: mechanic (l1, 1/3)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r002._.given.by_peer.mechanic.md
   │   └─ taken: .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r002._.taken.by_self.mechanic.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🦉 the reviewers await your reply

🌕 lets respond
   │
   ├─ review.peer 1/1
   │  ├─ slug = architect
   │  ├─ verdict = 1 blocker, 0 nitpicks
   │  ├─ contemplate from
   │  │  └─ .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.given.by_peer.architect.md
   │  └─ articulate into
   │     └─ .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.taken.by_self.architect.md
   │
   └─ when you've contemplated this reviewer, run
      └─ rhx route.stone.set --stone 1.execute --as contemplated --that architect
"
`;

exports[`driver.route.peer-contemplation.acceptance given: [case2] a driver that edits the artifact rather than answers when: [t1] the driver EDITS the artifact and re-runs, with no answer then: stdout matches snapshot: edit-escape - [t1] the edit does not discharge the debt 1`] = `
"🦉 the way speaks for itself

🦉 the reviewers await your reply

🌕 lets respond
   │
   ├─ review.peer 1/1
   │  ├─ slug = architect
   │  ├─ verdict = 1 blocker, 0 nitpicks
   │  ├─ contemplate from
   │  │  └─ .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.given.by_peer.architect.md
   │  └─ articulate into
   │     └─ .reviews/peer/1.execute._.review.i001.df6243be244b1651df.r001._.taken.by_self.architect.md
   │
   └─ when you've contemplated this reviewer, run
      └─ rhx route.stone.set --stone 1.execute --as contemplated --that architect
"
`;

exports[`driver.route.peer-contemplation.acceptance given: [case2] a driver that edits the artifact rather than answers when: [t2] the driver answers the CARRIED debt then: stdout matches snapshot: edit-escape - [t2] the answer buys entry, never passage 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: architect (l1, 2/3)
   │   ├─ approved [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i002.709383bd0387dae88f.r001._.given.by_peer.architect.md
   │   └─ taken: .reviews/peer/1.execute._.review.i002.709383bd0387dae88f.r001._.taken.by_self.architect.md
   │
   ├─ r2: mechanic (l1, 2/3)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i002.709383bd0387dae88f.r002._.given.by_peer.mechanic.md
   │   └─ taken: .reviews/peer/1.execute._.review.i002.709383bd0387dae88f.r002._.taken.by_self.mechanic.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🦉 the reviewers await your reply

🌕 lets respond
   │
   ├─ review.peer 1/1
   │  ├─ slug = architect
   │  ├─ verdict = 1 blocker, 0 nitpicks
   │  ├─ contemplate from
   │  │  └─ .reviews/peer/1.execute._.review.i002.709383bd0387dae88f.r001._.given.by_peer.architect.md
   │  └─ articulate into
   │     └─ .reviews/peer/1.execute._.review.i002.709383bd0387dae88f.r001._.taken.by_self.architect.md
   │
   └─ when you've contemplated this reviewer, run
      └─ rhx route.stone.set --stone 1.execute --as contemplated --that architect
"
`;

exports[`driver.route.peer-contemplation.acceptance given: [case2] a driver that edits the artifact rather than answers when: [t3] the driver answers the FRESH critique too then: stdout matches snapshot: edit-escape - [t3] the answer discharges the debt 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: architect (l1, 2/3)
   │   ├─ approved, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i002.709383bd0387dae88f.r001._.given.by_peer.architect.md
   │   └─ taken: .reviews/peer/1.execute._.review.i002.709383bd0387dae88f.r001._.taken.by_self.architect.md
   │
   ├─ r2: mechanic (l1, 2/3)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.execute._.review.i002.709383bd0387dae88f.r002._.given.by_peer.mechanic.md
   │   └─ taken: .reviews/peer/1.execute._.review.i002.709383bd0387dae88f.r002._.taken.by_self.mechanic.md
   │
   └─ ✓ judge.1 - allowed (cached)

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ 1.execute*.md
   │  ├─ reviews
   │  │   ├─ r1: architect (l1, 2/3)
   │  │   │   ├─ approved, cached
   │  │   │   ├─ 1 blocker 🔴
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   ├─ given: .reviews/peer/1.execute._.review.i002.709383bd0387dae88f.r001._.given.by_peer.architect.md
   │  │   │   └─ taken: .reviews/peer/1.execute._.review.i002.709383bd0387dae88f.r001._.taken.by_self.architect.md
   │  │   └─ r2: mechanic (l1, 2/3)
   │  │       ├─ approved, cached
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       ├─ given: .reviews/peer/1.execute._.review.i002.709383bd0387dae88f.r002._.given.by_peer.mechanic.md
   │  │       └─ taken: .reviews/peer/1.execute._.review.i002.709383bd0387dae88f.r002._.taken.by_self.mechanic.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 1 --allow-nitpicks 5
   │          └─ · cached
   │             └─ on 1.execute*.md
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;
